--- a/movie-app/src/styles/Header.css
+++ b/movie-app/src/styles/Header.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
+    background-color: #0f172a;
     color: #fff;
     padding: 10px 20px;
     position: fixed;
@@ -35,7 +35,7 @@
   }
   
   .nav-link:hover {
-    background-color: #555;
+    background-color: #0f172a;
     color: #fff;
   }
   
