--- a/movie-app/src/styles/Login.css
+++ b/movie-app/src/styles/Login.css
@@ -4,7 +4,6 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #f4f4f4;
 }
 
 .form {
@@ -45,13 +44,13 @@ input {
 
 input:focus {
   outline: none;
-  border-color: #007bff;
+  border-color: #020617;
 }
 
 .button {
   width: 100%;
   padding: 0.75rem;
-  background-color: #007bff;
+  background-color: #091753;
   color: white;
   border: none;
   border-radius: 4px;
@@ -66,7 +65,7 @@ input:focus {
 }
 
 .button:hover:not(:disabled) {
-  background-color: #0056b3;
+  background-color: #020617;
 }
 
 .error {
