refactor: refactor login screen feat: translate text from English style: update styling for pages inheriting from home

--- a/movie-app/src/styles/App.css
+++ b/movie-app/src/styles/App.css
@@ -46,4 +46,12 @@ body {
     right: 16px;
     z-index: 1000;
   }
+
   
+  .title {
+    color: #fff;
+    display:flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+  }
