fix: correct API endpoint naming. fix: update frontend endpoints. feat: implement infinite scroll for home screen. feat: implement infinite scroll for search screen. style: center virtual loading component.

--- a/movie-app/src/styles/App.css
+++ b/movie-app/src/styles/App.css
@@ -55,3 +55,8 @@ body {
     gap: 20px;
     justify-content: center;
   }
+
+  .page-load-progress {
+    display:flex;
+    justify-content:center;
+  }
